--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -19,64 +18,76 @@
 
 </head>
 <body>
-    <header>
-        <div class="row menu-bar">
-            <div class="col-2">MARCH 30, 2017</div>
-            <div class="col-7">MEMPHIS</div>
-            <div class="col-2">#CYNTHIAANDWILLIAM</div>
-        </div>
-        <div class="row title-container">
-            <h2 class="header-title">CYNTHIA & WILLIAM</h2>
-        </div>
-    </header>
-    <section class="banner">
-        <div class="col-8 offset-2">
-            <h1>WERE GETTING MARRIED!</h1>
-        </div>
-    </section>
-    <section class="article">
-        <div class="container">
-            <div class="how-we-met row">
-                <div class="col-lg-6 col-sm-12 right-border">
-                    <div class="row">
-                        <img class="palmier" src="./img/Palmier1-White.png">
-                    </div>
-                    <h2>HOW WE MET</h2>
-                    <p class="sub-head">3.05.17</p>
+<header>
+    <!--Menu-->
+    <div class="row menu-bar">
+        <div class="col-2">MARCH 30, 2017</div>
+        <div class="col-7">MEMPHIS</div>
+        <div class="col-2">#CYNTHIAANDWILLIAM</div>
+    </div>
+    <!--End Menu-->
+    <div class="row title-container">
+        <h2 class="header-title">CYNTHIA & WILLIAM</h2>
+    </div>
+</header>
+<!--Main Landing Page-->
+<section class="banner">
+    <div class="col-8 offset-2">
+        <h1>WERE GETTING MARRIED!</h1>
+    </div>
+</section>
+<!--End Landing Page-->
+<!--Main Content-->
+<section class="article">
+    <!--Container-->
+    <div class="container">
+        <!--How We Met-->
+        <div class="how-we-met row">
+            <div class="col-lg-6 col-sm-12 right-border">
+                <div class="row">
+                    <img class="palmier" src="./img/Palmier1-White.png">
                 </div>
-                <div class="col-lg-6 col-sm-12">
-                    <div class="row"></div>
-                    <div class="row">
-                        <div class="col-10 offset-1 bottom-border">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra dolor sit amet dui
-                                finibus, vitae sagittis dolor suscipit. Aenean accumsan mollis lacus sed sagittis.
-                                Praesent lorem urna, efficitur nec enim in, pretium hendrerit justo. Morbi mollis, enim
-                                ut sagittis tempus, arcu nisi finibus magna, non ultrices arcu elit sed enim.</p>
-                        </div>
-                    </div>
-                </div>
+                <h2>HOW WE MET</h2>
+                <p class="sub-head">3.05.17</p>
             </div>
-            <div class="the-proposal row">
-                <div class="col-lg-6 col-sm-12 right-border">
-                    <div class="row">
-                        <img class="palmier" src="./img/Palmier1-White.png">
-                    </div>
-                    <h2>THE PROPOSAL</h2>
-                    <p class="sub-head">3.05.17</p>
-                </div>
-                <div class="col-lg-6 col-sm-12 ">
-                    <div class="row">
-                        <div class="col-10 offset-1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra dolor sit amet dui
-                                finibus, vitae sagittis dolor suscipit. Aenean accumsan mollis lacus sed sagittis.
-                                Praesent lorem urna, efficitur nec enim in, pretium hendrerit justo. Morbi mollis, enim
-                                ut sagittis tempus, arcu nisi finibus magna, non ultrices arcu elit sed enim.</p>
-                        </div>
+            <div class="col-lg-6 col-sm-12">
+                <div class="row"></div>
+                <div class="row">
+                    <div class="col-10 offset-1 bottom-border">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra dolor sit amet dui
+                            finibus, vitae sagittis dolor suscipit. Aenean accumsan mollis lacus sed sagittis.
+                            Praesent lorem urna, efficitur nec enim in, pretium hendrerit justo. Morbi mollis, enim
+                            ut sagittis tempus, arcu nisi finibus magna, non ultrices arcu elit sed enim.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+        <!--End How We Met-->
+        <!--The Proposal-->
+        <div class="the-proposal row">
+            <div class="col-lg-6 col-sm-12 right-border">
+                <div class="row">
+                    <img class="palmier" src="./img/Palmier1-White.png">
+                </div>
+                <h2>THE PROPOSAL</h2>
+                <p class="sub-head">3.05.17</p>
+            </div>
+            <div class="col-lg-6 col-sm-12 ">
+                <div class="row">
+                    <div class="col-10 offset-1">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra dolor sit amet dui
+                            finibus, vitae sagittis dolor suscipit. Aenean accumsan mollis lacus sed sagittis.
+                            Praesent lorem urna, efficitur nec enim in, pretium hendrerit justo. Morbi mollis, enim
+                            ut sagittis tempus, arcu nisi finibus magna, non ultrices arcu elit sed enim.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End The Proposal-->
+    </div>
+    <!--End Container-->
+</section>
+<!--End Main Content-->
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
